vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__context_clause-2.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "to_test_text(Parser::context_declaration, \"\\\ncontext ident is\nend context;\")"
---
ContextDeclaration
  ContextDeclarationPreamble
    Keyword(Context)
    Identifier 'ident'
    Keyword(Is)
  ContextDeclarationEpilogue
    Keyword(End)
    Keyword(Context)
    SemiColon
