vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__context_clause-3.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "to_test_text(Parser::context_declaration, \"\\\ncontext ident is\nend ident;\")"
---
ContextDeclaration
  Keyword(Context)
  Identifier 'ident'
  Keyword(Is)
  ContextClause
  Keyword(End)
  Identifier 'ident'
  SemiColon
