vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__context_clause_associated_with_design_units.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "to_test_text(Parser::design_file,\n\"\\\nlibrary lib;\nuse lib.foo;\n\nentity myent is\nend entity;\")"
---
DesignFile
  DesignUnit
    ContextClause
      LibraryClause
        Keyword(Library)
        LogicalNameList
          Identifier 'lib'
        SemiColon
      UseClauseContextItem
        UseClause
          Keyword(Use)
          NameList
            Name
              NameDesignatorPrefix
                Identifier 'lib'
              SelectedName
                Dot
                Identifier 'foo'
          SemiColon
    EntityDeclaration
      EntityDeclarationPreamble
        Keyword(Entity)
        Identifier 'myent'
        Keyword(Is)
      EntityDeclarationEpilogue
        Keyword(End)
        Keyword(Entity)
        SemiColon
  Eof
