vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__context_clause_items.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "to_test_text(Parser::context_declaration,\n\"\\\ncontext ident is\n  library foo;\n  use foo.bar;\n  context foo.ctx;\nend context;\")"
---
ContextDeclaration
  ContextDeclarationPreamble
    Keyword(Context)
    Identifier 'ident'
    Keyword(Is)
  ContextClause
    LibraryClause
      Keyword(Library)
      LogicalNameList
        Identifier 'foo'
      SemiColon
    UseClauseContextItem
      UseClause
        Keyword(Use)
        NameList
          Name
            NameDesignatorPrefix
              Identifier 'foo'
            SelectedName
              Dot
              Identifier 'bar'
        SemiColon
    ContextReference
      Keyword(Context)
      NameList
        Name
          NameDesignatorPrefix
            Identifier 'foo'
          SelectedName
            Dot
            Identifier 'ctx'
      SemiColon
  ContextDeclarationEpilogue
    Keyword(End)
    Keyword(Context)
    SemiColon
