vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__context_declaration_missing_end.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
context my_ctx is
  library ieee;

== tree ==
DesignFile
  DesignUnit
    ContextDeclaration
      ContextDeclarationPreamble
        Keyword(Context)
        Identifier 'my_ctx'
        Keyword(Is)
      ContextClause
        LibraryClause
          Keyword(Library)
          LogicalNameList
            Identifier 'ieee'
          SemiColon
  Eof

== diagnostics ==
2:16 expected ContextDeclarationEpilogue
