vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__design_file_top_level_body_keyword.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
body

== tree ==
DesignFile
  DesignUnit
    Keyword(Body)
  Eof

== diagnostics ==
1:1..1:5 unexpected 'body'
