vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__empty_file.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==


== tree ==
DesignFile
  Eof

== diagnostics ==
1:1 expected DesignUnit
